--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-directions": "^4.3.0",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "mapbox-gl": "^3.2.0",
